--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <td>
     <div class="cot">
         <div class="lienket">
-        <a href="que huong.html"> <img src="daphoabinh.jpg"> Quê Hương <br> <br> <br> </a>
-        <a href="infomaion.html"> <img src="avt.jpg"> bản thân <br> <br> <br> </a>
+        <a href="index(2).html"> <img src="daphoabinh.jpg"> Quê Hương <br> <br> <br> </a>
+        <a href="index(3).html"> <img src="avt.jpg"> bản thân <br> <br> <br> </a>
         <a href=""> <img src="dacsan.jpg"> Đặc sản <br> <br> <br> </a>
         </div>
      </div>
@@ -32,7 +32,7 @@
         
         <td>
      <div class="cot">
-        <img src="D:\CNTT\lập trình\kiemtragiuaki\duymanh.jpg">
+        <img src="duymanh.jpg">
         <h1> Infomaion </h1>
         <b>  name : Đào Duy Mạnh  <br> </b>
         <b>  Date : 06/06/2001    <br> </b>
