--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <td>
     <div class="cot">
         <div class="lienket">
-        <a href="./index(2).html"> <img src="daphoabinh.jpg"> Quê Hương <br> <br> <br> </a>
-        <a href="./index(3).html"> <img src="avt.jpg"> bản thân <br> <br> <br> </a>
+        <a href=".\index(2).html"> <img src="daphoabinh.jpg"> Quê Hương <br> <br> <br> </a>
+        <a href=".\index(3).html"> <img src="avt.jpg"> bản thân <br> <br> <br> </a>
         <a href=""> <img src="dacsan.jpg"> Đặc sản <br> <br> <br> </a>
         </div>
      </div>
